--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="">Stock</a>
+                <a class="nav-link" routerLink="stock">Stock</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" routerLink="order">Order</a>
