--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -24,7 +24,7 @@
                 <div class="btn-div">
                     <div class="row mb-3">
                         <div class="col-md-12 text-center">
-                            <button style="height: 40px;" (click)="register()" class="btn">SIgn Up</button>
+                            <button style="height: 40px;" (click)="register()" class="btn">Sign Up</button>
                         </div>
                     </div>
                 </div>
