--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
                 <a class="nav-link" routerLink="date">Date</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" routerLink="signup">Sign Up</a>
+                <a class="nav-link" routerLink="user">Users</a>
             </li>
             
         </ul>
