--- a/src/app/order/stock/stock.component.html
+++ b/src/app/order/stock/stock.component.html
@@ -3,7 +3,8 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="form-group">
-                    <button type="button" class="form-control btn-height" (click)="onClickReport()">Nashua Waste Report</button>
+                    <button type="button" class="form-control btn-height" (click)="onClickReport()">Nashua Waste
+                        Report</button>
                 </div>
             </div>
 
@@ -21,7 +22,17 @@
             </div>
             <div class="col-md-3">
                 <div class="form-group">
-                    <input type="date" class="form-control" value="Change time for date update">
+                    <mat-form-field>
+                        <input matInput [ngxMatDatetimePicker]="picker" placeholder="Choose a date"
+                            [(ngModel)]="fromDate" name="fromDate" [min]="minDate" [max]="maxDate"
+                            [disabled]="disabled">
+                        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                        <ngx-mat-datetime-picker #picker [showSpinners]="showSpinners" [showSeconds]="showSeconds"
+                            [stepHour]="stepHour" [stepMinute]="stepMinute" [stepSecond]="stepSecond"
+                            [touchUi]="touchUi" [color]="color" [enableMeridian]="enableMeridian"
+                            [disableMinute]="disableMinute" [hideTime]="hideTime">
+                        </ngx-mat-datetime-picker>
+                    </mat-form-field>
                 </div>
             </div>
             <div class="col-md-1">
@@ -31,7 +42,16 @@
             </div>
             <div class="col-md-3">
                 <div class="form-group">
-                    <input type="date" class="form-control" value="Change time for date update">
+                    <mat-form-field>
+                        <input matInput [ngxMatDatetimePicker]="picker1" placeholder="Choose a date"
+                            [(ngModel)]="toDate" name="toDate" [min]="minDate" [max]="maxDate" [disabled]="disabled">
+                        <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                        <ngx-mat-datetime-picker #picker1 [showSpinners]="showSpinners" [showSeconds]="showSeconds"
+                            [stepHour]="stepHour" [stepMinute]="stepMinute" [stepSecond]="stepSecond"
+                            [touchUi]="touchUi" [color]="color" [enableMeridian]="enableMeridian"
+                            [disableMinute]="disableMinute" [hideTime]="hideTime">
+                        </ngx-mat-datetime-picker>
+                    </mat-form-field>
                 </div>
             </div>
         </div>
@@ -42,15 +62,15 @@
                 <label>SALES STATUS</label>
             </div>
             <div class="col-md-3">
-                <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
+                <input class="radio" type="checkbox" value="" />
                 Estimating<br>
-                <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
+                <input class="radio" type="checkbox" value="" />
                 Estimated<br>
-                <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
+                <input class="radio" type="checkbox" value="" />
                 Ordering<br>
-                <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
+                <input class="radio" type="checkbox" value="" />
                 Ordered<br>
-                <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
+                <input class="radio" type="checkbox" value="" />
                 Backrdering
             </div>
         </div>
