--- a/src/app/order/stock-table/stock-table.component.css
+++ b/src/app/order/stock-table/stock-table.component.css
@@ -1,12 +1,6 @@
-.selectpicker{
-    width: 100%;
-    height: 35px;
+.btn{
+    margin-left: 10px;
 }
-
-.form-group {
-    margin: 20px;
-}
-
 .loader{
   position: fixed;
   left: 0px;
