--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,13 +1,16 @@
 .container-fluid {
-    background-color: #679f60;
+    background-color: #19440d;
     color: white;
 }
 
 .nav-link{
     color: white !important;
+    margin: 0px 20px 0px 20px;
 }
-
+.nav-item {
+    border-right: 1px solid;
+}
 a{
     cursor: pointer;
-
 }
+
