--- a/src/app/order/report/report.component.html
+++ b/src/app/order/report/report.component.html
@@ -21,7 +21,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 <button class="btn btn-primary" (click)="download()">Download</button>
-                <button class="btn btn-primary" (click)="history()">History</button>
+                <!-- <button class="btn btn-primary" (click)="history()">History</button> -->
                 <button class="btn btn-primary" (click)="refresh()">Refresh</button>
             </div>
         </div>
