--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,40 @@
+<div>
+  <div style=" text-align: center;">
+    <img style="height: 70px; width: 50px;"
+      src="https://cdn.shopify.com/s/files/1/0081/2285/9605/files/greenhouse-logo.svg?v=11777566451454855719"
+      alt=""><br>
+    <span>GreenHouse</span><br>
+    <span>Plantit Portal</span>
+  </div>
+  <div style="text-align: right; margin-right: 15px;">
+    <span></span>
+    <span></span>
+  </div>
+</div>
+
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <ul class="navbar-nav mr-auto">
+      <!-- <li class="nav-item active">
+        <a class="nav-link" routerLink="stock">STOCK CONTROL</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="order">ORDER PROCESSING</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="date">DATE UPDATER </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="user">ADMIN</a>
+      </li> -->
+    </ul>
+  </div>
+</nav>
+
+
 <div class="container">
+
   <div class="loginDiv">
     <form [formGroup]="loginForm">
       <div class="row justify-content-center">
@@ -8,10 +44,10 @@
         <div class="form-group">
           <input type="password" class="form-control" placeholder="Password" formControlName="password" />
         </div>
-  
+
         <div class="btn-div">
           <div class="row mb-3">
-            <div  class="col-md-12 text-center">
+            <div class="col-md-12 text-center">
               <button style="height: 40px;" (click)="login()" class="btn">Login</button>
             </div>
           </div>
@@ -19,5 +55,5 @@
       </div>
     </form>
   </div>
- 
+
 </div>
