--- a/src/app/order/user/user.component.html
+++ b/src/app/order/user/user.component.html
@@ -7,11 +7,15 @@
             </button>
         </div>
         <div>
-            <ag-grid-angular #agGrid style="width: 100%; height: 400px" class="ag-theme-alpine" [rowData]="rowData"
+            <ag-grid-angular [gridOptions]="gridOptions" style="width: 100%; height: 650px;"
+                (gridReady)="onGridReady($event)" class="ag-theme-alpine"  [frameworkComponents]="frameworkComponents" [columnDefs]="columnDefs" [rowData]="rowData">
+            </ag-grid-angular>
+
+            <!-- <ag-grid-angular #agGrid style="width: 100%; height: 400px" class="ag-theme-alpine" [rowData]="rowData"
                 [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" (onGridReady)="onGridReady($event)"
                 [pagination]="false" [suppressCellSelection]="true" [paginationPageSize]="paginationPageSize"
                 [frameworkComponents]="frameworkComponents" [rowStyle]="rowStyle" [getRowStyle]="getRowStyle">
-            </ag-grid-angular>
+            </ag-grid-angular> -->
         </div>
 
     </div>
