--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,7 +4,7 @@
             src="https://cdn.shopify.com/s/files/1/0081/2285/9605/files/greenhouse-logo.svg?v=11777566451454855719"
             alt=""><br>
         <span>GreenHouse</span><br>
-        <span>Plantit Portal</span>
+        <span>Plans Portal</span>
     </div>
     <div style="text-align: right; margin-right: 15px;">
         <a (click)="logout()">LOG OUT</a><br>
