--- a/src/app/order/order/order.component.css
+++ b/src/app/order/order/order.component.css
@@ -6,3 +6,23 @@
 .form-group {
     margin: 20px;
 }
+
+.btn-height {
+    height: 100%;
+}
+
+
+.div{
+  margin-top: 5%;
+}
+  
+.loader{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: url('//upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Phi_fenomeni.gif/50px-Phi_fenomeni.gif') 
+                50% 50% no-repeat rgb(249,249,249);
+  }
