--- a/src/app/order/order/order.component.html
+++ b/src/app/order/order/order.component.html
@@ -1,189 +1,57 @@
 <div class="container">
+    <div *ngIf="loaderFlag" class="loader"></div>
+
     <div class="div">
         <div class="row">
             <div class="col-md-4">
                 <div class="form-group">
-                    <input type="button" class="form-control btn-height" value="HD Stock Check(Single Day)">
+                    <button id="masterBtn" type="button" class="form-control btn-height" (click)="onMasterPick()">
+                        <span>MASTER PICK</span><br>
+                        <span>(Pick Orders in Dear + Print Pick List + Print Packing Slips + Print Box Labels)</span>
+                    </button>
                 </div>
             </div>
-            <div class="col-md-1">
+            <div class="col-md-6">
                 <div class="form-group">
-                    <label>FOR</label>
+                    <label for="file">FILE</label><br>
+                    <input type="file" id="fileMaster" (change)="onFilechange($event)"><br>
+                    <span>Files must be .csv, containing at minimum, columns with headings: "Driver Name", "Stop Number"
+                        (0 & 999 are Nashua), "Visit Name", "Order" (containing an order number), and "Phone"</span>
                 </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <input type="date" class="form-control " value="Change time for date update">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <input type="button" class="form-control btn-height" value="HD Stock Check">
-                </div>
-            </div>
-            <div class="col-md-1">
-                <div class="form-group">
-                    <label>FOR</label>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <input type="date" class="form-control" value="Change time for date update">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <input type="button" class="form-control btn-height" value="HD Pick">
-                </div>
-            </div>
-            <div class="col-md-1">
-                <div class="form-group">
-                    <label>FOR</label>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <input type="date" class="form-control" value="Change time for date update">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <input type="button" class="form-control btn-height" value="HD Combined Pick List">
-                </div>
-            </div>
-            <div class="col-md-1">
-                <div class="form-group">
-                    <label>FOR</label>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <input type="date" class="form-control" value="Change time for date update">
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Override Existing Pick
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label>Ordering Status</label><br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Estimating<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Estimated<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Ordering<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Ordered<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Backrdering
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label>Pick Combined Status</label><br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Not Placed<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Picked<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Picking<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Etc..<br>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <input type="button" class="form-control btn-height" value="HD Invoice And Local Print">
-                </div>
-            </div>
-            <div class="col-md-1">
-                <div class="form-group">
-                    <label>FOR</label>
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <input type="date" class="form-control" value="Change time for date update">
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label>Ordering Status</label><br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Estimating<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Estimated<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Ordering<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Ordered<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Backrdering
-                </div>
-            </div>
-            <div class="col-md-3">
-                <div class="form-group">
-                    <label>Pick Combined Status</label><br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Not Placed<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Picked<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Picking<br>
-                    <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="..." />
-                    Etc..<br>
-                </div>
-            </div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <input type="button" class="form-control btn-height" value="HD Single Invoice Reprint">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <input type="button" class="form-control btn-height" value="order #">
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-md-4">
-                <div class="form-group">
-                    <input type="button" class="form-control btn-height" value="HD Single Label Reprint">
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="form-group">
-                    <input type="button" class="form-control btn-height" value="order #">
-                </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
-                    <input type="text" class="form-control" value="5">
+                    <button id="masterUpload" type="button" class="form-control btn-height"
+                        (click)="onMasterPick('true')">Upload</button>
                 </div>
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="form-group">
+                    <button id="printBtn" type="button" class="form-control btn-height" (click)="onPrintOnly()">
+                        <span>PRINT ONLY</span><br>
+                        <span>(Print Pick List + Print Packing Slips + Print Box Labels)</span>
+                    </button>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="file">FILE</label><br>
+                    <input type="file" id="filePrint" (change)="onFilechange($event)"><br>
+                    <span>Files must be .csv, containing at minimum, columns with headings: "Driver Name", "Stop Number"
+                        (0 & 999 are Nashua), "Visit Name", "Order" (containing an order number), and "Phone"</span>
+                </div>
+
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <button id="printUpload" type="button" class="form-control btn-height"
+                        (click)="onPrintOnly('false')">Upload</button>
+                </div>
+
             </div>
         </div>
 
