--- a/src/app/order/stock/stock.component.html
+++ b/src/app/order/stock/stock.component.html
@@ -30,10 +30,7 @@
                             [(ngModel)]="fromDate" name="fromDate" [min]="minDate" [max]="maxDate"
                             [disabled]="disabled">
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                        <ngx-mat-datetime-picker #picker [showSpinners]="showSpinners" [showSeconds]="showSeconds"
-                            [stepHour]="stepHour" [stepMinute]="stepMinute" [stepSecond]="stepSecond"
-                            [touchUi]="touchUi" [color]="color" [enableMeridian]="enableMeridian"
-                            [disableMinute]="disableMinute" [hideTime]="hideTime">
+                        <ngx-mat-datetime-picker #picker [showSpinners]="showSpinners">
                         </ngx-mat-datetime-picker>
                     </mat-form-field>
                 </div>
