--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -3,7 +3,7 @@
     <img style="height: 70px; width: 50px;"
       src="https://cdn.shopify.com/s/files/1/0081/2285/9605/files/greenhouse-logo.svg?v=11777566451454855719"
       alt=""><br>
-    <span>GreenHouse</span><br>
+    <span>Plantit</span><br>
     <!-- <span>Plans Portal</span> -->
   </div>
   <div style="text-align: right; margin-right: 15px;">
