--- a/src/app/order/order/order.component.css
+++ b/src/app/order/order/order.component.css
@@ -26,3 +26,7 @@
     background: url('//upload.wikimedia.org/wikipedia/commons/thumb/e/e5/Phi_fenomeni.gif/50px-Phi_fenomeni.gif') 
                 50% 50% no-repeat rgb(249,249,249);
   }
+
+  mat-progress-bar {
+    height: 2em;
+  }
